# rustpe

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  Rocket.toml
src/: main.rs
src/helper/: db.rs  mod.rs
src/model/: event.rs  mod.rs
static/css/: app.css  tabzilla.css
static/js/: app.js
templates/: 404.html.hbs  index.html.hbs
